# research

./: CLAUDE.md  README.md
.github/workflows/: update-readme.yml
atlas-custom-role-test/: .env.sample  CLAUDE.md  README.md  _summary.md  run.sh
atlas-custom-role-test/scripts/: verify_as_test_user.mongo.js
mongodb-ops-manager-kubernetes/: CLAUDE.md  README.md
mongodb-ops-manager-kubernetes/certs/: gen_cert.bash  make_OM_certs.bash  make_cert_issuer.bash  update-ca.bash
mongodb-ram-observatory/: .env.example  CLAUDE.md  Dockerfile  README.md  _summary.md  docker-compose.yml  package-lock.json  package.json
noc-copilot/: .env.example  .gitignore  README.md  WALKTHROUGH.md  _summary.md  pyproject.toml
noc-copilot/scripts/: load_data.py  run_demo.py  setup_atlas.py  test_search.py
noc-copilot/src/noc_copilot/: __init__.py  config.py  models.py
noc-copilot/src/noc_copilot/agent/: __init__.py  graph.py  llm.py  state.py  tools.py
noc-copilot/src/noc_copilot/agent/nodes/: _phase.py  diagnosis.py  remediation.py  retrieval.py  routing.py  triage.py
noc-copilot/src/noc_copilot/agent/tools/: __init__.py  _common.py  diagnosis_tools.py  remediation_tools.py  retrieval_tools.py  triage_tools.py
noc-copilot/src/noc_copilot/data/: generator.py  loader.py  seed_data.py
noc-copilot/src/noc_copilot/db/: collections.py  connection.py  indexes.py
noc-copilot/src/noc_copilot/embeddings/: voyage.py
noc-copilot/src/noc_copilot/search/: full_text_search.py  hybrid_search.py  vector_search.py
noc-copilot/src/noc_copilot/ui/: streamlit_app.py  terminal.py
noc-copilot/tests/: test_agent.py  test_embeddings.py  test_search.py
shard-key-analyzer/: .env.example  .gitignore  LICENSE  README.md  _summary.md  package-lock.json  package.json
(+100 files in other folders)
