[project]
name = "noc-copilot"
version = "0.1.0"
description = "Telco NOC Copilot - Autonomous Network Incident Resolution Agent"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pymongo>=4.7",
    "dnspython>=2.0",
    "motor>=3.4",
    "voyageai>=0.3",
    "anthropic>=0.40",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
