[project]
name = "noc-copilot"
version = "0.1.0"
description = "Telco NOC Copilot — Agentic workflow for 5G network incident resolution"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pymongo>=4.7",
    "dnspython>=2.0",
    "motor>=3.4",
    "voyageai>=0.3",
    # The agent reaches Claude only via langchain-anthropic; the bare anthropic
    # SDK is pulled in transitively. Listed explicitly to document intent.
    "anthropic>=0.40",
    # We rely on LangGraph 1.x APIs: RemainingSteps, Command, InjectedState,
    # InjectedToolCallId, and create_react_agent's state_schema parameter.
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "streamlit>=1.35",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
